--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <body>
     <div class="container">
 
-      <!-- INTRO -->
       <div class="one">
         <h1 class="one">
           Hey
@@ -25,10 +24,78 @@
         </p>
       </div>
 
-      <!-- TRANSITION -->
       <div class="three">
-        <p>Just a little surprise.</p>
+        <p>It's Valentine!!! ❤️</p>
       </div>
 
-      <!-- REMOVE CHAT CRINGE, KEEP CLEAN -->
       <div class="four">
+        <div class="text-box">
+          <p class="hbd-chatbox">
+            I wanted to make something special for you.
+          </p>
+          <p class="fake-btn">Open</p>
+        </div>
+      </div>
+
+      <div class="five">
+        <p class="idea-1">That’s what I was going to do.</p>
+        <p class="idea-2">But then I stopped.</p>
+        <p class="idea-3">
+          I realised I wanted to do something <strong>personal</strong>.
+        </p>
+        <p class="idea-4">Because,</p>
+        <p class="idea-5">
+          This is for you
+          <span>🤍</span>
+        </p>
+        <p class="idea-6">
+          <span>S</span>
+          <span>O</span>
+        </p>
+      </div>
+
+      <div class="six">
+        <img
+          src="img/Picsart_26-02-06_04-47-35-569.png"
+          alt="Wallpaper"
+          class="girl-dp"
+          id="imagePath"
+        />
+
+        <div class="wish">
+          <h3 class="wish-hbd">Happy Valentine’s Day</h3>
+          <h5 id="wishText">
+            This is for you.  
+            Made with love — Ruzeni
+          </h5>
+        </div>
+      </div>
+
+      <div class="seven">
+        <div class="baloons">
+          <img src="img/balloon.svg" />
+          <img src="img/heart.svg" />
+          <img src="img/balloon.svg" />
+          <img src="img/heart.svg" />
+          <img src="img/music-note.svg" />
+          <img src="img/smiling.svg" />
+          <img src="img/happy.svg" />
+        </div>
+      </div>
+
+      <!-- REQUIRED even if empty -->
+      <div class="eight"></div>
+
+      <div class="nine">
+        <p>I hope this made you smile.</p>
+        <p id="replay">Tap to watch again.</p>
+        <p class="last-smile">🤍</p>
+      </div>
+
+    </div>
+
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+    <script type="text/babel" src="script/main.js"></script>
+  </body>
+</html>
